--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Herbal Shop</title>
-  <link rel="icon" href="/assets/icons/favicon.ico" />
+  <link rel="icon" href="src/assets/images/favicon.ico" />
     <!-- PWA 支持 -->
     <link rel="manifest" href="/public/manifest.json">
     <meta name="theme-color" content="#007AFF">
@@ -13,14 +13,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="src/assets/images/apple-touch-icon.png">
     
     <!-- Open Graph 元数据 -->
     <meta property="og:title" content="Herbal Shop">
     <meta property="og:description" content="天然草本产品专家 Telegram Mini App">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourdomain.com/">
-    <meta property="og:image" content="https://yourdomain.com/assets/images/icon-512x512.png">
+    <meta property="og:image" content="https://yourdomain.com/src/assets/images/icon-512x512.png">
 </head>
 <body>
   <div id="root"></div>
