--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Herbal Shop</title>
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" href="./favicon.ico" />
+  <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#007AFF">
   
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="./apple-touch-icon.png">
   
   <meta property="og:title" content="Herbal Shop">
   <meta property="og:description" content="天然草本产品专家 Telegram Mini App">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://yourdomain.com/">
-  <meta property="og:image" content="/icon-512x512.png">
+  <meta property="og:image" content="./icon-512x512.png">
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="./src/main.tsx"></script>
 </body>
 </html>
