--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Herbal Shop</title>
   <link rel="icon" href="https://pub-2ff14554386b479b8ec529dfd5061359.r2.dev/favicon.ico" />
-  <link rel="manifest" href="https://pub-2ff14554386b479b8ec529dfd5061359.r2.dev/manifest.json">
+  <!-- <link rel="manifest" href="https://pub-2ff14554386b479b8ec529dfd5061359.r2.dev/manifest.json"> -->
   <meta name="theme-color" content="#007AFF">
   
   <meta name="apple-mobile-web-app-capable" content="yes">
