--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="https://telegram.org/js/telegram-web-app.js?57"></script>
+  <!--<script src="https://telegram.org/js/telegram-web-app.js?57"></script>-->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Herbal Shop</title>
-  <link rel="icon" href="https://pub-2ff14554386b479b8ec529dfd5061359.r2.dev/favicon.ico" />
-  <!-- <link rel="manifest" href="https://pub-2ff14554386b479b8ec529dfd5061359.r2.dev/manifest.json"> -->
+  <link rel="icon" href="https://raw.githubusercontent.com/TuningZhou/herbalShop/refs/heads/main/assets/images/favicon.ico" />
+  <!-- <link rel="manifest" href="/manifest.json"> -->
   <meta name="theme-color" content="#007AFF">
   
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <link rel="apple-touch-icon" href="https://pub-2ff14554386b479b8ec529dfd5061359.r2.dev/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/TuningZhou/herbalShop/refs/heads/main/assets/images/apple-touch-icon.png">
   
   <meta property="og:title" content="Herbal Shop">
   <meta property="og:description" content="天然草本产品专家 Telegram Mini App">
