--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--<script src="https://telegram.org/js/telegram-web-app.js?57"></script>-->
+  <script src="https://telegram.org/js/telegram-web-app.js?57"></script>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <meta name="telegram-web-app" content="true">
   <title>Herbal Shop</title>
   <link rel="icon" href="https://raw.githubusercontent.com/TuningZhou/herbalShop/refs/heads/main/assets/images/favicon.ico" />
-  <!-- <link rel="manifest" href="/manifest.json"> -->
   <meta name="theme-color" content="#007AFF">
   
   <meta name="apple-mobile-web-app-capable" content="yes">
